2004-09-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_get_nice_codec_name),
	(bacon_video_widget_open): Show an error about the audio codec not
	being handled if we have an audio only file for which we don't have
	a codec

2004-09-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata):
	* src/bacon-video-widget.h: add BVW_INFO_ALBUM metadata
	* src/totem-pl-parser.c: (totem_pl_parser_parse_internal):
	Fix parsing of Real audio playlists (Closes: #153263)

2004-09-20  Bastien Nocera  <hadess@hadess.net>

	* data/vanity.glade: remove Bonobo requirement
	* src/.cvsignore: upd
	* src/vanity.c: (main): upd for glade file changes, allow to load
	the .glade file from the local filesystem

2004-09-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/bacon-cd-selection.c:
	* src/bacon-cd-selection.h:
	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/dvd_plus_rw_utils.cpp:
	* src/totem-preferences.c:
	* src/transport.hxx: Remove copy and pasted CD selection widget code
	and use the code from the libnautilus-burn library

2004-09-16  Bastien Nocera  <hadess@hadess.net>

	* src/egg-recent-model.c: (egg_recent_model_monitor): updated from
	libegg

============ Version 0.99.16

2004-09-16  Bastien Nocera  <hadess@hadess.net>

	* configure.in:

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: update the Copyright notices
	* src/totem-playlist.c: (totem_playlist_current_has_prefix),
	(totem_playlist_clear_with_prefix):
	* src/totem-playlist.h: add totem_playlist_clear_with_prefix
	to remove playlist items with a particular prefix
	* src/totem.c: (totem_action_eject): call
	totem_playlist_clear_with_prefix when ejecting an optical media
	instead of simply stopping the play, so that the stream doesn't
	appear in the UI after an eject (Closes: #148480)
