@@ -1,3 +1,8 @@
+2004-09-25  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (main): load the .glade file from the sources, if we
+	can, remove unneeded glade_init()
+
 2004-09-21  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-xine.c: (xine_event_message),
